--- a/index.html
+++ b/index.html
@@ -7,6 +7,26 @@
 	<script src="js.js"></script>
 </head>
 <body>
-	
+	<div id="root">
+		<h2>Добавить дело</h2>
+			<input id="new task" type="text">
+			<button id="add">Add</button>
+			<h2>Список дел</h2>
+				<ul >
+					<li>
+						<label>123</label>
+						<button>Выполнить</button>
+						<button>Удалить</button>
+					</li>
+				</ul>
+			<h2>Завершенные дела</h2>
+				<ul >
+					<li>
+						<label>123</label>
+						<button>Выполнить</button>
+						<button>Удалить</button>
+					</li>
+				</ul>
+	</div>	
 </body>
-</html>
+</html> 
